--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@preact/signals": "^1.2.1",
+    "preact": "^10.18.1",
+    "htm": "^3.1.1"
   },
   "devDependencies": {
+    "@nichoth/tapzero": "^0.8.0",
     "@preact/preset-vite": "^2.5.0",
-    "@socketsupply/tapzero": "^0.7.1",
     "@typescript-eslint/parser": "^5.55.0",
     "esbuild": "^0.15.18",
     "postcss-nesting": "^12.0.1",
-    "preact": "^10.17.1",
     "standardx": "^7.0.0",
     "tap-arc": "^0.3.5",
     "tape-run": "^10.0.0",
