--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "dependencies": {
     "@preact/signals": "^1.2.1",
-    "preact": "^10.18.1",
-    "htm": "^3.1.1"
+    "htm": "^3.1.1",
+    "preact": "^10.18.1"
   },
   "devDependencies": {
+    "@nichoth/debug": "^0.2.2",
     "@nichoth/tapzero": "^0.8.0",
     "@preact/preset-vite": "^2.5.0",
     "@typescript-eslint/parser": "^5.55.0",
