--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   },
   "rules": {
     "operator-linebreak": ["off"],
+    "indent": ["error", 4, { "ignoredNodes": ["TemplateLiteral *"] }],
     "multiline-ternary": "off",
     "no-multiple-empty-lines": [
       "error",
@@ -17,7 +18,6 @@
       }
     ],
     "no-undef": "off",
-    "indent": [ "error", 4 ],
     "comma-dangle": "off",
     "no-multi-spaces": ["error", { "ignoreEOLComments": true }]
   }
