--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && tsc --project tsconfig.build.json",
     "start": "vite",
     "preversion": "npm run lint",
-    "postversion": "git push && git push --tags && npm publish",
+    "version": "auto-changelog --template keepachangelog --breaking-pattern 'BREAKING CHANGE' && git add CHANGELOG.md",
+    "postversion": "git push && git push --tags && gh-release -y && npm publish",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "@nichoth/tapzero": "^0.8.4",
     "@preact/preset-vite": "^2.7.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "auto-changelog": "^2.4.0",
     "esbuild": "^0.19.5",
     "postcss-nesting": "^12.0.1",
     "standardx": "^7.0.0",
