--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^6.12.0",
     "auto-changelog": "^2.4.0",
     "esbuild": "^0.19.5",
+    "gh-release": "^7.0.2",
     "postcss-nesting": "^12.0.1",
     "standardx": "^7.0.0",
     "tap-arc": "^1.2.2",
