--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "vite",
     "preversion": "npm run lint",
     "version": "auto-changelog --template keepachangelog --breaking-pattern 'BREAKING CHANGE' && git add CHANGELOG.md",
-    "postversion": "git push && git push --tags && -y && npm publish",
+    "postversion": "git push --follow-tags && -y && npm publish",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -22,18 +22,18 @@
     "preact": "^10.18.1"
   },
   "devDependencies": {
-    "@nichoth/debug": "^0.3.0",
+    "@nichoth/debug": "^0.3.1",
     "@nichoth/tapzero": "^0.8.4",
     "@preact/preset-vite": "^2.7.0",
     "@typescript-eslint/parser": "^6.12.0",
     "auto-changelog": "^2.4.0",
-    "esbuild": "^0.19.5",
+    "esbuild": "^0.19.9",
     "postcss-nesting": "^12.0.1",
     "standardx": "^7.0.0",
     "tap-arc": "^1.2.2",
     "tape-run": "^11.0.0",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.2"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.7"
   },
   "exports": {
     ".": {
