--- a/.eslintrc
+++ b/.eslintrc
@@ -2,16 +2,18 @@
   "parser": "@typescript-eslint/parser",
   "ignorePatterns": ["lib.es5.d.ts"],
   "parserOptions": {
-    "requireConfigFile": false,
-    "babelOptions": {
-    }
+    "requireConfigFile": false
   },
+  "extends": [
+    "standard",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
     "operator-linebreak": ["off"],
-    "indent": ["error", 4, {
-      "SwitchCase": 1,
-      "ignoredNodes": ["TemplateLiteral *"]
-    }],
     "multiline-ternary": "off",
     "no-multiple-empty-lines": [
       "error",
@@ -21,6 +23,10 @@
       }
     ],
     "no-undef": "off",
+    "indent": ["error", 4, {
+      "SwitchCase": 1,
+      "ignoredNodes": ["TemplateLiteral *"]
+    }],
     "comma-dangle": "off",
     "no-multi-spaces": ["error", { "ignoreEOLComments": true }]
   }
