--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "standardx -v \"./**/*.ts\"",
+    "lint": "eslint \"./**/*.{ts,js}\"",
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
     "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
     "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
@@ -18,23 +18,25 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@preact/signals": "^1.2.1",
+    "@preact/signals": "^1.2.2",
     "htm": "^3.1.1",
-    "preact": "^10.18.1"
+    "preact": "^10.19.6"
   },
   "devDependencies": {
-    "@nichoth/debug": "^0.6.1",
-    "@nichoth/tapzero": "^0.8.4",
-    "@preact/preset-vite": "^2.7.0",
+    "@nichoth/debug": "^0.6.5",
+    "@bicycle-codes/tapzero": "^0.9.2",
+    "@preact/preset-vite": "^2.8.1",
     "@typescript-eslint/parser": "^6.12.0",
     "auto-changelog": "^2.4.0",
     "esbuild": "^0.20.0",
-    "postcss-nesting": "^12.0.1",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "postcss-nesting": "^12.0.3",
     "standardx": "^7.0.0",
     "tap-arc": "^1.2.2",
     "tape-run": "^11.0.0",
     "typescript": "^5.3.3",
-    "vite": "^5.1.2"
+    "vite": "^5.1.5"
   },
   "exports": {
     ".": {
